log
Wed 27 Sep 2023 07:18:48 PM UTC: 
 tests:  0|4
total_score: 0/70
45cc1fa
Thu 28 Sep 2023 05:12:53 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                            ^~~~~
      |                            malloc
heap.c:36:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
6e23545
Thu 28 Sep 2023 05:13:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                            ^~~~~
      |                            malloc
heap.c:36:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                     ^
heap.c:39:51: error: ‘heaElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |     newHeap->heapArray = (heapElem*)malloc(sizeof(heaElem) * newHeap->capac);
      |                                                   ^~~~~~~
      |                                                   heapElem
heap.c:39:51: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
35dc8bb
Thu 28 Sep 2023 05:13:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                            ^~~~~
      |                            malloc
heap.c:36:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                     ^
heap.c:39:37: error: implicit declaration of function ‘maloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   39 |     newHeap->heapArray = (heapElem*)maloc(sizeof(heaElem) * newHeap->capac);
      |                                     ^~~~~
      |                                     malloc
heap.c:39:50: error: ‘heaElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |     newHeap->heapArray = (heapElem*)maloc(sizeof(heaElem) * newHeap->capac);
      |                                                  ^~~~~~~
      |                                                  heapElem
heap.c:39:50: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
42744d0
Thu 28 Sep 2023 05:13:46 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
d983d53
Thu 28 Sep 2023 05:14:12 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: implicit declaration of function ‘retun’ [-Werror=implicit-function-declaration]
   21 |     if (pq->size == 0) retun NULL;
      |                        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ab62655
Thu 28 Sep 2023 05:14:36 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: implicit declaration of function ‘retrun’ [-Werror=implicit-function-declaration]
   21 |     if (pq->size == 0) retrun NULL;
      |                        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c0f05f
Thu 28 Sep 2023 05:14:59 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
7d65580
Thu 28 Sep 2023 05:15:40 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:24: error: ‘rturn’ undeclared (first use in this function)
   33 |     if (pq->size == 0) rturn;
      |                        ^~~~~
heap.c:33:24: note: each undeclared identifier is reported only once for each function it appears in
heap.c:34:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘sze’; did you mean ‘size’?
   34 |     pq->sze--;
      |         ^~~
      |         size
Compilation failed
9c41c97
Thu 28 Sep 2023 05:15:57 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   33 |     if (pq->size == 0) return;turn;
      |     ^~
heap.c:33:31: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   33 |     if (pq->size == 0) return;turn;
      |                               ^~~~
heap.c:33:31: error: ‘turn’ undeclared (first use in this function)
heap.c:33:31: note: each undeclared identifier is reported only once for each function it appears in
heap.c:34:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘sze’; did you mean ‘size’?
   34 |     pq->sze--;
      |         ^~~
      |         size
cc1: all warnings being treated as errors
Compilation failed
eded524
Thu 28 Sep 2023 05:16:16 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:34:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘sizeze’; did you mean ‘size’?
   34 |     pq->sizeze--;
      |         ^~~~~~
      |         size
Compilation failed
0ac82da
Thu 28 Sep 2023 05:16:32 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a376097
Thu 28 Sep 2023 05:17:41 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:25: error: implicit declaration of function ‘relloc’; did you mean ‘realloc’? [-Werror=implicit-function-declaration]
   30 |         pq->heapArray = relloc(pq->heapArray, sizeof(heapElem) * pq->capac);
      |                         ^~~~~~
      |                         realloc
heap.c:30:23: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   30 |         pq->heapArray = relloc(pq->heapArray, sizeof(heapElem) * pq->capac);
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
c853861
Thu 28 Sep 2023 05:17:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:25: error: implicit declaration of function ‘relloc’; did you mean ‘realloc’? [-Werror=implicit-function-declaration]
   30 |         pq->heapArray = relloc(pq->heapArray, sizeof(heapElem) * pq->caac);
      |                         ^~~~~~
      |                         realloc
heap.c:30:70: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘caac’; did you mean ‘capac’?
   30 |         pq->heapArray = relloc(pq->heapArray, sizeof(heapElem) * pq->caac);
      |                                                                      ^~~~
      |                                                                      capac
cc1: all warnings being treated as errors
Compilation failed
90b52f4
